--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="btn">Show</button>
-    <script src="js/common.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
